fix(style): site shift while swithcing nav tabs

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -1,3 +1,7 @@
+html {
+  height: 101%;
+}
+
 body {
   background-color: #f5fcff;
   position: relative;
